k8s/test/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: nuvexa.local
      http:
        paths:
          - path: /api/vehiculos(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: vehiculos
                port:
                  number: 3000
          - path: /api/conductores(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: personal
                port:
                  number: 3000
          - path: /api/pasajeros(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: personal
                port:
                  number: 3000
